--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 02:54:00 PM</p>
+    <p class="lastupdate">09/07/2020 02:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">110.0&#176;F</td>
+        <td class="data">110.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">110.0&#176;F</td>
+        <td class="data">110.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">110.0&#176;F</td>
+        <td class="data">110.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.0&#176;F</td>
+        <td class="data">48.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">14%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.687 inHg (-0.080)</td>
+        <td class="data">29.684 inHg (-0.083)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.5&#176;F</td>
+        <td class="data">87.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:53:16 PM">
-            110.0</span><br/>
+          <span title="02:58:44 PM">
+            110.5</span><br/>
           <span title="07:29:05 AM">
             67.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:53:16 PM" class="hival">
-            110.0</span>
+          <span title="02:58:44 PM" class="hival">
+            110.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="11:23:38 AM">
             58.4</span><br/>
-          <span title="02:06:04 PM">
-            49.1</span>
+          <span title="02:58:10 PM">
+            48.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:20:19 AM">
             56</span><br/>
-          <span title="02:38:32 PM">
-            14</span>
+          <span title="02:58:10 PM">
+            13</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:20:19 AM (Monday)">
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="02:50:02 PM">
-            29.687</span>
+          <span title="02:55:02 PM">
+            29.684</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="02:50:02 PM (Monday)">
-            29.687</span>
+          <span title="02:55:02 PM (Monday)">
+            29.684</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 02:50:02 PM">
-            29.687</span>
+          <span title="09/07/2020 02:55:02 PM">
+            29.684</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 02:50:02 PM">
-            29.687</span>
+          <span title="09/07/2020 02:55:02 PM">
+            29.684</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 02:50:02 PM">
-            29.687</span>
+          <span title="09/07/2020 02:55:02 PM">
+            29.684</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:48:02 PM">
-            87.5</span><br/>
+          <span title="02:58:02 PM">
+            87.7</span><br/>
           <span title="07:35:01 AM">
             78.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 0 hours, 7 minutes</td>
+      <td class="data">6 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 0 hours, 7 minutes</td>
+      <td class="data">6 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
