--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 03:14:00 PM</p>
+    <p class="lastupdate">09/07/2020 03:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">110.8&#176;F</td>
+        <td class="data">111.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">110.8&#176;F</td>
+        <td class="data">111.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">110.8&#176;F</td>
+        <td class="data">111.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.6&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">14%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.682 inHg (-0.076)</td>
+        <td class="data">29.681 inHg (-0.075)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="03:10:02 PM">
-            29.681</span>
+          <span title="03:14:02 PM">
+            29.678</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="03:10:02 PM (Monday)">
-            29.681</span>
+          <span title="03:14:02 PM (Monday)">
+            29.678</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 03:10:02 PM">
-            29.681</span>
+          <span title="09/07/2020 03:14:02 PM">
+            29.678</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 03:10:02 PM">
-            29.681</span>
+          <span title="09/07/2020 03:14:02 PM">
+            29.678</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 03:10:02 PM">
-            29.681</span>
+          <span title="09/07/2020 03:14:02 PM">
+            29.678</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:10:02 PM">
-            87.9</span><br/>
+          <span title="03:16:02 PM">
+            88.0</span><br/>
           <span title="07:35:01 AM">
             78.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 0 hours, 27 minutes</td>
+      <td class="data">6 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 0 hours, 27 minutes</td>
+      <td class="data">6 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
